--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
        <link rel="icon" href=""/>
      
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1HBQVC3B6N"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WHBDLY7DR5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-1HBQVC3B6N');
+  gtag('config', 'G-WHBDLY7DR5');
 </script>
 
         <style>
